Kustomize/overlays/example/dep_nav.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nav-svc
spec:
  replicas: 3
