Kustomize/overlays/example/svc_nav.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nav-svc
  name: nav-svc
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: nav-svc
  ports:
  - name: "nav-api"
    targetPort: 5000
    port: 5000
  loadBalancerIP:
    192.168.50.200
