Kustomize/overlays/example/gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nav-svc
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "nav.svc"
      tls:
        mode: SIMPLE
        privateKey: /etc/istio/ingressgateway-certs/tls.key
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
